--- a/src/pages/Publications/Publications.css
+++ b/src/pages/Publications/Publications.css
@@ -1,5 +1,6 @@
 .Publications > main{
-    height: 100vh;
     width: 100vw;
+    min-height: 100vh;
     padding-top: 150px;
+    background: var(--background);
 }
