--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,7 +13,6 @@
     align-items: center;
     width: 100vw;
     height: 150px;
-    border: var(--t);
     transition: all 350ms ease;
 }
 
@@ -29,7 +28,6 @@
     position: fixed;
     top: 35px;
     z-index: 999;
-    mix-blend-mode: difference;
 }
 .Header > section:nth-child(2).active{
     top: 200px;
@@ -160,7 +158,7 @@
 
 .Header > section > nav > a{
     text-decoration: none;
-    color: var(--text-alternative);
+    color: var(--text-alternative2);
     transition: all 350ms ease;
 }
 .Header > section > nav > a:hover{
