--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,6 +14,7 @@
     width: 100vw;
     height: 150px;
     transition: all 350ms ease;
+    border: var(--t);
 }
 
 .Header > section:first-child{
