--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
     --gray2: #515458;
     --gray3: #7D7F82;
     --gray4: #979797;
-    --gray5: #26292E;
+    --gray5: #a5a4a4;
     --gray6: #BEBFC0;
     --gray7: #E9EAEA;
     --gray8: #FFFFFF;
