--- a/src/pages/Persons/Persons.css
+++ b/src/pages/Persons/Persons.css
@@ -1,39 +1,66 @@
 /*PERSONS*/
-.Persons > main{
+.Persons{
+    position: relative;
     width: 100vw;
     min-height: 100vh;
     padding: 10rem 0;
-    background: var(--background);
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: end;
-}
-
-.Persons > main > section:first-child{
-    width: 100%;
-    height: 12rem;
-    background: var(--gray7);
-    padding: 2rem 3rem 1rem 3rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
 
-.Persons > main > section:nth-child(2){
-    width: 18%;
-    position: fixed;
-    top: 25.4rem;
-    left: 3rem;
-    border-radius: .3rem;
-    background: var(--background-section4);
+.Persons > div{
+    position: relative;
+    width: 100%;
+    margin-top: -200px;
 }
 
-.Persons > main > section:nth-child(3){
-    width: 75vw;
-    height: 100%;
-    margin: 0 3rem 1rem 3rem;
+.Persons > div > img{
+    position: absolute;
+    filter: brightness(60%); 
+    top: 0;
+    height: 120vh;
+    width: 100vw;
+    margin-top: -200px;
+    z-index: -1;
+}
+
+.Persons > div::after {
+    content: "";
+    width: 100%;
+    height: 50vh;
+    position: absolute;
+    left: 0;
+    top: 49.5vh;
+    background-image: linear-gradient(to top, #ffffff, transparent);
+    z-index: -1;
+  }
+
+.Persons > main{
+    width: 65vw;
+    margin-top: 35vh;
+    border-radius: .3rem;
+    background: var(--background);
+}
+
+.Persons > main > section:first-child{
+    width: 100%;
+    height: 25vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 5vh;
+    border-radius: .3rem;
+}
+
+.Persons > main > section:first-child > h1{
+    margin-top: -4rem;
+    width: 100%;
+    text-align: center;
+    color: var(--text-alternative);
+    height: 5rem;
 }
 
 .Persons > main > section:first-child > form{
@@ -43,6 +70,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 1rem;
+    border: var(--t);
 }
 
 .Persons > main > section:first-child > form > input{
@@ -60,12 +88,33 @@
     font-size: 48px;
 }
 
-.Persons > main > section > .container{
+.Persons > main > section:nth-child(2){
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.Persons > main > section:nth-child(2) > div:first-child{
+    position: absolute;
+    top: 1rem;
+    left: calc(-15vw - 1rem);
+    width: 15vw;
+    padding: 1rem;
+    border-radius: .2rem;
+    background: var(--background-section3);
+}
+
+.Persons > main > section:nth-child(2) > div:nth-child(2){
+    text-align: center;
+}
+
+.Persons > main > section:nth-child(2) > div:nth-child(2) > .container{
     display: inline-block;
     margin: 1rem;
 }
 
-.Persons > main > section > .container > div{
+.Persons > main > section:nth-child(2) > div:nth-child(2) > .container > div{
     width: 22rem;
     height: 12rem;
     background: var(--blue5);
@@ -78,16 +127,16 @@
     gap: 1rem;
 }
 
-.Persons > main > section > .container > div > span{
+.Persons > main > section:nth-child(2) > div:nth-child(2) > .container > div > span{
     font-size: 128px;
     border: var(--t);
 }
 
-.Persons > main > section > .container > div > div > h4{
+.Persons > main > section:nth-child(2) > div:nth-child(2) > .container > div > div > h4{
     cursor: pointer;
     transition: all 350ms ease;
 }
-.Persons > main > section > .container > div > div > h4:hover{
+.Persons > main > section:nth-child(2) > div:nth-child(2) > .container > div > div > h4:hover{
     opacity: .7;
 }
 
