--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,6 +1,163 @@
-.Projects > main{
+/*PROJECTS*/
+.Projects{
+    position: relative;
     width: 100vw;
     min-height: 100vh;
-    padding-top: 150px;
+    padding: 10rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.Projects > div{
+    position: relative;
+    width: 100%;
+    margin-top: -200px;
+}
+
+.Projects > div > img{
+    position: absolute;
+    filter: brightness(60%); 
+    top: 0;
+    height: 120vh;
+    width: 100vw;
+    margin-top: -200px;
+    z-index: -1;
+}
+
+.Projects > div::after {
+    content: "";
+    width: 100%;
+    height: 50vh;
+    position: absolute;
+    left: 0;
+    top: 49.5vh;
+    background-image: linear-gradient(to top, #ffffff, transparent);
+    z-index: -1;
+  }
+
+.Projects > main{
+    width: 65vw;
+    margin-top: 35vh;
+    border-radius: .3rem;
     background: var(--background);
+}
+
+.Projects > main > section:first-child{
+    width: 100%;
+    height: 25vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 5vh;
+    border-radius: .3rem;
+}
+
+.Projects > main > section:first-child > h1{
+    margin-top: -4rem;
+    width: 100%;
+    text-align: center;
+    color: var(--text-alternative);
+    height: 5rem;
+}
+
+.Projects > main > section:first-child > form{
+    width: 21.5vw;
+    display: flex;
+    height: 5rem;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    border: var(--t);
+}
+
+.Projects > main > section:first-child > form > input{
+    width: 100%;
+    height: 2rem;
+    border-radius: 0.3rem;
+    padding: 1rem;
+}
+
+.Projects > main > section:first-child > form > button{
+    height: 100%;
+}
+
+.Projects > main > section:first-child > form > button > span{
+    font-size: 48px;
+}
+
+.Projects > main > section:nth-child(2){
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.Projects > main > section:nth-child(2) > div:first-child{
+    position: absolute;
+    top: 1rem;
+    left: calc(-15vw - 1rem);
+    width: 15vw;
+    padding: 1rem;
+    border-radius: .2rem;
+    background: var(--background-section3);
+}
+
+.Projects > main > section:nth-child(2) > div:nth-child(2){
+    text-align: center;
+}
+
+.Projects > main > section:nth-child(2) > div:nth-child(2) > .container{
+    display: inline-block;
+    margin: 1rem;
+}
+
+.Projects > main > section:nth-child(2) > div:nth-child(2) > .container > div{
+    width: 100%;
+    height: 12rem;
+    background: var(--blue5);
+    border-radius: .3rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+}
+
+.Projects > main > section:nth-child(2) > div:nth-child(2) > .container > div > span{
+    font-size: 128px;
+    border: var(--t);
+}
+
+.Projects > main > section:nth-child(2) > div:nth-child(2) > .container > div > div > h4{
+    cursor: pointer;
+    transition: all 350ms ease;
+}
+.Projects > main > section:nth-child(2) > div:nth-child(2) > .container > div > div > h4:hover{
+    opacity: .7;
+}
+
+
+/*PROJECT ID*/
+.ProjectID > main{
+    width: 100vw;
+    min-height: 100vh;
+    padding: 10rem 0;
+    background: var(--background);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+
+.ProjectID > main > section{
+    flex: 1;
+    width: 100%;
+    min-height: 50vh;
+    padding: 3rem;
+    border: var(--t);
 }
