--- a/src/pages/Persons/Persons.css
+++ b/src/pages/Persons/Persons.css
@@ -13,7 +13,7 @@
 .Persons > div{
     position: relative;
     width: 100%;
-    margin-top: -200px;
+    margin-top: -10.5rem;
 }
 
 .Persons > div > img{
@@ -22,7 +22,7 @@
     top: 0;
     height: 120vh;
     width: 100vw;
-    margin-top: -200px;
+    margin-top: -20.5vh;
     z-index: -1;
 }
 
@@ -112,6 +112,10 @@
 .Persons > main > section:nth-child(2) > div:nth-child(2) > .container{
     display: inline-block;
     margin: 1rem;
+    transition: all 250ms ease;
+}
+.Persons > main > section:nth-child(2) > div:nth-child(2) > .container:hover{
+    transform: scale(1.1);
 }
 
 .Persons > main > section:nth-child(2) > div:nth-child(2) > .container > div{
@@ -134,7 +138,7 @@
 
 .Persons > main > section:nth-child(2) > div:nth-child(2) > .container > div > div > h4{
     cursor: pointer;
-    transition: all 350ms ease;
+    transition: all 250ms ease;
 }
 .Persons > main > section:nth-child(2) > div:nth-child(2) > .container > div > div > h4:hover{
     opacity: .7;
@@ -142,22 +146,85 @@
 
 
 /*PERSON ID*/
-.PersonID > main{
+.PersonID{
     width: 100vw;
     min-height: 100vh;
-    padding: 10rem 0;
     background: var(--background);
+    margin-top: -12.5rem;
+    padding: 25rem 0;
+}
+
+.PersonID > nav{
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    justify-content: start;
     align-items: center;
-    text-align: center;
+    width: 100vw;
+    margin: 0 auto;
+}
+
+.PersonID > nav > div{
+    flex: 1;
+    height: 3rem;
+    padding: 1rem;
+    border-radius: .2rem .2rem 0 0;
+    border-bottom: 1px solid var(--gray5);
+    cursor: pointer;
+    transition: all 250ms ease;
+    color: var(--button);
+}
+.PersonID > nav > div.active{
+    border: 1px solid var(--gray5);
+    border-bottom: none;
+}
+.PersonID > nav > div:nth-child(2){
+    flex: 2;
+    background: var(--background);
+}
+.PersonID > nav > div:nth-child(3){
+    flex: 2;
+    background: var(--background);
+}
+.PersonID > nav > div:nth-child(4){
+    flex: 2;
+    background: var(--background);
+}
+.PersonID > nav > div:nth-child(5){
+    flex: 2;
+    color: var(--text);
+    background: var(--gray5);
+    border: none;
+}
+.PersonID > nav > div:nth-child(6){
+    flex: 2;
+    color: var(--text);
+    background: var(--gray6);
+    border: none;
+}
+
+.PersonID > main{
+    margin: 0 auto;
+    width: 90vw;
+    background: var(--background);
 }
 
 .PersonID > main > section{
-    flex: 1;
     width: 100%;
-    min-height: 50vh;
-    padding: 3rem;
-    border: var(--t);
+    min-height: 70vh;
+    padding: 3rem 6rem;
+    display: none;
+}
+.PersonID > main > section.active{
+    display: block;
+}
+.PersonID > main > section:first-child{
+    background: var(--background);
+}
+.PersonID > main > section:nth-child(2){
+    background: var(--background);
+}
+.PersonID > main > section:nth-child(3){
+    background: var(--gray5);
+}
+.PersonID > main > section:nth-child(4){
+    background: var(--gray6);
 }
